[package]
name = "hpc_resource_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
hpc_core = { path = "../hpc_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"

