[package]
name = "hpc_storage_sqlite"
version = "0.1.0"
edition = "2024"

# [lib]
# crate-type = ["dylib"]

[dependencies]
hpc_core = { path = "../hpc_core" }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Async Runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"