[package]
name = "hpc_transport_http"
version = "0.1.0"
edition = "2024"

# [lib]
# crate-type = ["dylib"]

[dependencies]
hpc_core = { path = "../hpc_core" }
hpc_logic = { path = "../hpc_logic" }
futures-executor = "0.3"

# Server
axum = "0.7"
tokio = { version = "1.32", features = ["full"] }

# Client
reqwest = { version = "0.11", features = ["json"] }

# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"